--- a/wordleeeee/src/App.css
+++ b/wordleeeee/src/App.css
@@ -3,27 +3,67 @@
   padding: 2rem;
 }
 
+h1 {
+  font-size: 2.5rem;
+  margin-bottom: 2rem;
+}
+
+p {
+  font-size: 1.2rem;
+  margin-bottom: 1rem;
+}
+
+form {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 2rem;
+}
+
+input[type="text"] {
+  font-size: 1.5rem;
+  padding: 0.5rem;
+  width: 200px;
+  text-align: center;
+  border: none;
+  border-bottom: 2px solid black;
+  outline: none;
+}
+
+button {
+  font-size: 1.2rem;
+  padding: 0.5rem 1rem;
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
 .feedback-container {
-  margin-top: 1rem;
+  margin-top: 2rem;
 }
 
 .feedback {
   display: inline-block;
-  width: 1.5rem;
-  height: 1.5rem;
-  border: 1px solid black;
-  margin: 0 0.2rem;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  margin: 0 0.5rem;
 }
 
 .correct {
-  background-color: green;
+  background-color: #4caf50;
 }
 
 .close {
-  background-color: yellow;
+  background-color: #ffeb3b;
 }
 
 .incorrect {
-  background-color: red;
+  background-color: #f44336;
+}
+
+p.attempts {
+  font-size: 1.2rem;
+  margin-top: 2rem;
 }
 
